# linestyle

./: pyproject.toml  requirements.txt
examples/: make_demo.py  make_gallery.py
src/linestyle/: demo.py  plot.py  strokes.py
