[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linestyle"
version = "0.0.1"
description = "Hand-drawn-like SVG line style generator (liner first)."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "svgwrite",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
